# void-daisy

polymarket-profit-engine/: .env.example  .gitignore  README.md  SKILL.md  main.py  pyproject.toml
polymarket-profit-engine/core/: config.py  event_bus.py  logger.py  state.py
polymarket-profit-engine/data/: config.json  correlation_state.json  rl_sizer_state.json  signal_weights.json
polymarket-profit-engine/feeds/: binance_ws.py  chainlink_feed.py  polymarket_ws.py
polymarket-profit-engine/learning/: coordinator.py  l1_bayesian.py  l2_kalman.py  l3_hmm.py  l4_bandit.py  l5_gradient.py  l6_correlation.py  l7_rl_sizer.py  l8_calibrator.py
polymarket-profit-engine/plans/: base.py  engine_manager.py  plan_01_dead_cat.py  plan_02_oracle_knife.py  plan_03_shadow.py  plan_04_trend_rider.py  plan_05_rubber_band.py  plan_06_whale_fade.py  plan_07_volume_climax.py  plan_08_news_fade.py  plan_09_window_open.py  plan_10_correlated_collapse.py  plan_11_spread_compression.py  plan_12_scheduled_coverage.py
polymarket-profit-engine/regime/: detector.py  hmm_detector.py
polymarket-profit-engine/reporting/: telegram.py
polymarket-profit-engine/risk/: degrader.py  monitor.py  thought_train.py
polymarket-profit-engine/scheduler/: coverage_monitor.py  window_scheduler.py
polymarket-profit-engine/scripts/: health_check.py  setup.py
polymarket-profit-engine/signals/: correlation.py  exhaustion.py  momentum.py  orderbook.py  volume.py
polymarket-profit-engine/tests/: test_guardian.py  test_sizing.py
polymarket-profit-engine/trading/: executor.py  guardian.py  ranker.py  (+4 more)
(+65 files in other folders)
