[project]
name = "polymarket-profit-engine"
version = "3.0.0"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "aiohttp>=3.9",
  "py-clob-client>=0.18",
  "web3>=6.0",
  "python-telegram-bot>=20.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "aiosqlite>=0.19",
  "watchdog>=3.0",
  "tenacity>=8.2",
  "ujson>=5.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
